src/test/ui/issues/issue-47380.stderr
error[E0369]: cannot add `&str` to `&str`
  --> $DIR/issue-47380.rs:3:35
   |
LL |     println!("🦀🦀🦀🦀🦀"); let _a = b + ", World!";
   |                                      --^ ---------- &str
   |                                      |||
   |                                      ||`+` cannot be used to concatenate two `&str` strings
   |                                      |help: create an owned `String` from a string reference: `.to_owned()`
   |                                      &str
   |
   = note: string concatenation requires an owned `String` on the left

error: aborting due to previous error

For more information about this error, try `rustc --explain E0369`.
